# BA2Projet

./: ANSWERS.md  DESIGN.md  LOG.md  README.md  common_types.py  gameview.py  main.py  map.py  monster.py  plateform.py  player.py  portal.py  profile.prof  pyproject.toml  slime.py  subsprite.py  switch.py  weapon.py
loading_packs/caracters/: default.txt
loading_packs/sounds/: default.txt
loading_packs/textures/: default.txt
map/: all_out_map.txt  debug_map.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt  map7.txt  map8.txt  test_load.txt  test_map.txt  test_map_base.txt  test_map_coin
tests/: Tests_to_do  conftest.py  test_coin.py  test_load_map.py  test_main.py  test_map.py  test_monster.py  test_weapon.py
