[project]
name = "ba2projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.0.2",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250402",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "snakeviz>=2.2.2",
]

[tool.mypy]
strict = true
